<resources>
    <string name="app_name">iZiList</string>
    <string name="facebook_app_id">1075086232532336</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_label">LOGIN</string>
    <string name="facebook_login_label">Login With Facebook</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_hint">email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="full_name_hint">Full Name</string>
    <string name="action_logout_label">Log Out</string>
    <string name="action_refresh">Refresh</string>
    <string name="test_string">test</string>
    <string name="price_title">Preços</string>
    <string name="date_title">Data e Hora</string>
    <string name="place_title">Local</string>
    <string name="action_search">Search</string>
    <string name="in_list_button_label">colocar nome na lista</string>
    <string name="there_is_a_problem_message">há um problema em sua conexão, tente novamente mais tarde</string>
    <string name="name_added_button_label">nome adicionado!!</string>
    <string name="name_added_message">seu nome foi adicionado à lista\n Boa festa!!</string>
    <string name="name_removed_message">seu nome foi removido</string>
</resources>
