<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mauk.app.flickrbrowser.MainActivity" >

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout_label"
        android:orderInCategory="15"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="5"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

</menu>