<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <ImageView
            android:id="@+id/image"
            android:layout_below="@id/toolbar"
            android:layout_height="240dp"
            android:layout_width="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/chelsea"/>

        <TextView
            android:id="@+id/description"
            android:layout_below="@id/image"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_string"
            />

        <ImageView
            android:id="@+id/placeLogo"
            android:layout_below="@id/description"
            android:layout_margin="15dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/chelsea"
            />

        <TextView
            android:id="@+id/placeTitle"
            android:layout_toRightOf="@id/placeLogo"
            android:layout_below="@id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsFieldTitle"
            android:text="@string/place_title"
            />

        <TextView
            android:id="@+id/hostname"
            android:layout_below="@id/placeLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/test_string"
            />

        <include
            android:id="@+id/sep01"
            android:layout_below="@id/hostname"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            layout="@layout/horizontal_sep"
            />

        <ImageView
            android:id="@+id/dateLogo"
            android:layout_below="@id/sep01"
            android:layout_margin="15dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/chelsea"
            />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_toRightOf="@id/dateLogo"
            android:layout_below="@id/sep01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsFieldTitle"
            android:text="@string/date_title"
            />

        <TextView
            android:id="@+id/date"
            android:layout_below="@id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/test_string"
            />

        <include
            android:id="@+id/sep02"
            android:layout_below="@id/date"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            layout="@layout/horizontal_sep"
            />

        <ImageView
            android:id="@+id/priceLogo"
            android:layout_below="@id/sep02"
            android:layout_margin="15dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/chelsea"
            />

        <TextView
            android:id="@+id/priceTitle"
            android:layout_toRightOf="@id/dateLogo"
            android:layout_below="@id/sep02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailsFieldTitle"
            android:text="@string/price_title"
            />

        <TextView
            android:id="@+id/price"
            android:layout_below="@id/priceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/test_string"
            />

        <Button
            android:id="@+id/check_button"
            android:layout_below="@id/price"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="40dp"
            android:background="@color/listUnchecked"
            android:text="colocar nome na lista"
            />

    </RelativeLayout>
</ScrollView>